# data-loader-etl

./: .gitignore  CONFIG_README.md  NOTICE  README.md  config.example.json  config.example.json5  config.example.yaml  main.py  mypy.ini  pyproject.toml  pytest.ini
amr_example/: config.yaml  data.local.yaml  data.yaml
etl/: cli.py  config.py  database.py  dataset.py  main.py  models.py  transform.py  views.py
example/: config.json  config.json5  config.yaml  data.json  data.json5  data.yaml
schema/: config.json  dataset.json
sql/: schema.v2.sql
tests/: conftest.py  test_config.py  test_etl.py  test_regex.py  test_schema.py
tests/config/: config.json  config.json5  config.yaml  data.json  data.json5  data.yaml
tests/data/: test.csv
tests/results/: column_def.csv  dataset.csv  test.csv  view.csv  view_column.csv  view_filter.csv  view_filter_group.csv  view_filter_value.csv
