[project]
name = "etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "jsonschema>=4.25.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
    "types-jsonschema>=4.26.0.20260202",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
